@@ -1,5 +1,10 @@
 2019-08-09  Jakub Jelinek  <jakub@redhat.com>
 
+	* parser.c (check_no_duplicate_clause): Simplify using
+	omp_find_clause.
+	(cp_parser_omp_clause_if): Fix up printing of target {enter,exit} data
+	directive name modifiers.
+
 	PR c/91401
 	* parser.c (cp_parser_omp_clause_dist_schedule): Comment out the
 	check_no_duplicate_clause call, instead emit a warning for duplicate
