@@ -1,5 +1,8 @@
 2019-08-09  Jakub Jelinek  <jakub@redhat.com>
 
+	* c-c++-common/gomp/if-4.c: New test.
+	* c-c++-common/gomp/clause-dups-1.c: New test.
+
 	PR c/91401
 	* c-c++-common/gomp/pr91401-1.c: New test.
 	* c-c++-common/gomp/pr91401-2.c: New test.
